syntax = "proto3";
option csharp_namespace = "CommonModule.Protos";
import "google/protobuf/timestamp.proto";
package edge;
service Equipment {
	//unary endpoint for equipment client
  rpc Send (EquipmentMessage) returns (EdgeResponse);
  // Equipment client streaming
  rpc SendStream (stream EquipmentMessage) returns (EdgeResponse);
  // Equipment Bi directional streaming
  rpc SendBiDirectionalStream (stream EquipmentMessage) returns (stream EdgeResponse);
}

service Facility {
	//unary endpoint for equipment client
  rpc Send (FacilityMessage) returns (EdgeResponse);
  
}

message EquipmentMessage {
  string messageId=1;
  string deviceId=2;
  string status=3;
  google.protobuf.Timestamp timestamp=4;
  float temperature=5;
  float energyConsumption=6;
  int32  productionRate=7;
  string payload=8;
}
message EdgeResponse {
  string messageId=1;
  google.protobuf.Timestamp _receivedTime=2;
}
message FacilityMessage {
  float temperature=1;
  float humidity=2;
  google.protobuf.Timestamp timestamp_start=3;
  google.protobuf.Timestamp timestamp_end=4;
}

